--- a/src/index.css
+++ b/src/index.css
@@ -239,7 +239,7 @@ html {
   display: flex;
   justify-content: space-around;
   align-items: left;
-  padding: 150px 120px;
+  padding: 140px 40px;
   margin-bottom: 0;
 
   color: #fff;
@@ -1030,5 +1030,9 @@ padding:20px;
   content: none;  /* removes the underline */
 }
 
+ed {
+  background: rgba(85, 73, 126, 0.95);
+  box-shadow: 0 8px 30px rgba(45,212,191,.35);
+}
 
 }
