--- a/src/index.css
+++ b/src/index.css
@@ -367,7 +367,7 @@ section, .hero {
 @media (max-width: 768px) {
 
   .hero {
-    flex-direction: column;
+    flex-direction: column-reverse;
     padding: 100px 16px;
     align-items: center;
     text-align: center;
@@ -381,6 +381,7 @@ section, .hero {
   .hero-right {
     position: relative;
     right: 0;
+    margin-bottom:20px;
   }
 
 }
