--- a/src/index.css
+++ b/src/index.css
@@ -367,6 +367,7 @@ section, .hero {
 @media (max-width: 768px) {
 
   .hero {
+    display:flex;
     flex-direction: column-reverse;
     padding: 100px 16px;
     align-items: center;
@@ -379,8 +380,8 @@ section, .hero {
   }
 
   .hero-right {
-    position: relative;
-    right: 0;
+  
+   overflow:hidden;
     margin-bottom:20px;
   }
 
@@ -1094,7 +1095,7 @@ ed {
 
   /* Hero layout */
   .hero {
-    flex-direction: column;
+    flex-direction: column-reverse;
     padding: 100px 16px;
     text-align: center;
   }
