--- a/src/index.css
+++ b/src/index.css
@@ -934,7 +934,7 @@ ul.project-features li {
 }
 
 /* Container */
-.container {
+.contact-container {
   max-width: 1100px;
   margin: 0 auto;
   display: flex;
@@ -955,7 +955,9 @@ ul.project-features li {
   gap: 1rem;
   min-width: 280px;
 }
-
+.disabled{
+   pointer-events: none;
+  opacity: 0.5;
 .contact-item {
   display: flex;
   align-items: center;
