--- a/src/index.css
+++ b/src/index.css
@@ -958,6 +958,7 @@ ul.project-features li {
 .disabled{
    pointer-events: none;
   opacity: 0.5;
+}
 .contact-item {
   display: flex;
   align-items: center;
